tests/spec/compile-pass/019_shared_clone_visible_cost.zn
// category: compile-pass
// profile: freestanding
// purpose: Shared clone makes reference-counted sharing visible in the type

module tests.pass.sharedCloneVisibleCost;

import core.alloc.GlobalAllocator;

struct Packet {
    bytes: Array<U8>,
}

fn share(move packet: Packet, mut allocator: GlobalAllocator) -> Shared<Packet> {
    let first = Shared.newIn(packet, mut allocator);
    let second = first.clone();
    let ignored = second;
    return first;
}
