tests/spec/compile-fail/070_c_layout_non_c_field.zn
// category: compile-fail
// profile: hosted
// purpose: C layout accepts only C-compatible field types

module tests.fail.cLayoutNonCField;

@layout(C)
struct Bad {
    bytes: Vector<U8>, // expected-error: Vector is not C-compatible in @layout(C)
}

fn main() {}
